--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -50,8 +50,8 @@
     - docker-ce
     - apt-transport-https
     - ca-certificates
-    - software-properties-common
     - jq
+    - yamllint
 
 - name: apend user to docker group
   user:
@@ -61,10 +61,10 @@
     groups: docker
     append: yes
 
-- name: create project directory for downloads
+- name: create  directory for .kube
   file: 
     state: directory
-    path: downloads
+    path: .kube
     mode: 0775
     owner: "{{ ansible_user }}"
     group: "{{ ansible_user }}"
@@ -73,17 +73,37 @@
   get_url: 
     url: https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip
     #dest: downloads/awscliv2.zip
-    dest: downloads/awscli-exe-linux-x86_64.zip
+    dest: ./awscli-exe-linux-x86_64.zip
     mode: 0664
     owner: "{{ ansible_user }}" 
     group: "{{ ansible_user }}" 
-- name: download helm
+- name: download k8s
   get_url: 
-    url: https://get.helm.sh/helm-v3.3.1-linux-amd64.tar.gz
-    dest: downloads/helm-v3.3.1-linux-amd64.tar.gz
-    mode: 0664
+    url: https://storage.googleapis.com/kubernetes-release/release/v1.18.6/bin/linux/amd64/kubectl
+    dest: /usr/local/bin/kubectl
+    mode: 0764
     owner: "{{ ansible_user }}" 
     group: "{{ ansible_user }}" 
+#- name: download helm
+#  get_url: 
+#    url: https://get.helm.sh/helm-v3.3.1-linux-amd64.tar.gz
+#   dest: ./helm-v3.3.1-linux-amd64.tar.gz
+#    mode: 0664
+#    owner: "{{ ansible_user }}" 
+#    group: "{{ ansible_user }}" 
 
-#- name: "Copying the bashalias file"
-#  copy: src=./roles/buildservercommon/files/.bashaliases dest=~/.bashaliases owner={{ ansible_user }} group=root mode=0644
+- name: "Copying the bashalias file"
+  copy: src=./roles/buildservercommon/files/.bash_aliases dest=~/.bash_aliases owner={{ ansible_user }} group=root mode=0644
+
+- name: "Copy post install bash script of useful thingsa"
+  copy: src=./roles/buildservercommon/files/postinstall.sh dest=~/postinstall.sh owner={{ ansible_user }} group=root mode=0744
+  
+
+
+#docker pull
+#requires ansible-galaxy collection install community.general
+#requires docker-py for python2.6
+#- name: Pull Rancher image
+#  community.general.docker_image:
+#    name: rancher/rancher:v2.4.5
+#    source: pull
