--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -21,7 +21,7 @@
 
 - name: download and add Docker GPG key to apt
   apt_key:
-    url: https://download.docker.com/linux/ubuntu/gpg 
+    url: https://download.docker.com/linux/ubuntu/gpg
     state: present
 
 - name: append docker repository to sources.list (HARDCODED AS BIONIC)
@@ -29,6 +29,12 @@
     state: present
     #sudo add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable"
     repo: deb [arch=amd64] https://download.docker.com/linux/ubuntu bionic stable
+
+- name: add wireshark repo for 5G/NGAP tshark decode
+  apt_repository:
+    state: present
+    #sudo add-apt-repository ppa:wireshark-dev/stable
+    repo: ppa:wireshark-dev/stable
 
 - name: Update repo and upgrade packages
   apt:
@@ -52,30 +58,31 @@
     - ca-certificates
     - jq
     - yamllint
+    - tshark
 
 - name: apend user to docker group
   user:
     #name: "{{ lookup('env','USER') }}"
-    #name: "{{ user }}" 
+    #name: "{{ user }}"
     name: "{{ ansible_user }}"
     groups: docker
     append: yes
 
 - name: create  directory for .kube
-  file: 
+  file:
     state: directory
     path: .kube
     mode: 0775
     owner: "{{ ansible_user }}"
     group: "{{ ansible_user }}"
-  
+
 #- name: download aws
-#  get_url: 
+#  get_url:
 #    url: https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip
 #    dest: ./awscliv2.zip
 #    mode: 0664
-#    owner: "{{ ansible_user }}" 
-#    group: "{{ ansible_user }}" 
+#    owner: "{{ ansible_user }}"
+#    group: "{{ ansible_user }}"
 - name: Download and Unarchive a file AWS
   unarchive:
     src: https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip
@@ -84,26 +91,30 @@
 
 
 - name: download k8s
-  get_url: 
+  get_url:
     url: https://storage.googleapis.com/kubernetes-release/release/v1.18.6/bin/linux/amd64/kubectl
     dest: /usr/local/bin/kubectl
     mode: 0764
-    owner: "{{ ansible_user }}" 
-    group: "{{ ansible_user }}" 
+    owner: "{{ ansible_user }}"
+    group: "{{ ansible_user }}"
 #- name: download helm
-#  get_url: 
+#  get_url:
 #    url: https://get.helm.sh/helm-v3.3.1-linux-amd64.tar.gz
 #   dest: ./helm-v3.3.1-linux-amd64.tar.gz
 #    mode: 0664
-#    owner: "{{ ansible_user }}" 
-#    group: "{{ ansible_user }}" 
+#    owner: "{{ ansible_user }}"
+#    group: "{{ ansible_user }}"
 
+- name: "Copying motd file"
+  copy: src=./roles/buildservercommon/files/motd dest=/etc/motd owner={{ ansible_user }} group=root mode=0644
 - name: "Copying the bashalias file"
-  copy: src=./roles/buildservercommon/files/.bash_aliases dest=./.bash_aliases owner={{ ansible_user }} group=root mode=0644
+  copy: src=./roles/buildservercommon/files/bash_aliases dest=./.bash_aliases owner={{ ansible_user }} group=root mode=0644
+- name: "Copying the .vimrc"
+  copy: src=./roles/buildservercommon/files/vimrc dest=./.vimrc owner={{ ansible_user }} group=root mode=0644
 
 - name: "Copy post install bash script of useful thingsa"
-  copy: src=./roles/buildservercommon/files/postinstall.sh dest=./postinstall.sh owner={{ ansible_user }} group=root mode=0744
-  
+  copy: src=./roles/buildservercommon/files/postinstall-buildserver.sh dest=./postinstall-buildserver.sh owner={{ ansible_user }} group=root mode=0744
+
 
 
 #docker pull
@@ -115,11 +126,11 @@
 #    source: pull
 
 # APPEND BASHRC
-- name: append kubectl shortcuts and completion to bashrc file.  
+- name: append kubectl shortcuts and completion to bashrc file.
   blockinfile:
     path: .bashrc
     block: |
-      #ANSIBLE Shortcuts and completion
       source <(kubectl completion bash)
       complete -F __start_kubectl k
-
+      export BASE='/home/ubuntu/casa-5gc/install_v5.2.0'
+      export KUBECONFIG='/home/ubuntu/.kube/config'
